# aoc23

./: .gitignore  LICENSE  aoc23.cabal
src/: P1a.hs  P1b.hs  P2a.hs  P2b.hs  P3a.hs  P3b.hs  P4a.hs  P4b.hs  P5a.hs  P5b.hs  P6a.hs  P6b.hs  P7a.hs  P7b.hs  P8a.hs  P8b.hs  P9a.hs  P9b.hs
