cabal-version:      2.4
name:               aoc23
version:            1.0.0.0

synopsis:           Advent of Code 2023
description:        Advent of Code 2023

license:            MIT
license-file:       LICENSE
author:             hellobye65536
maintainer:         boshwang1234@gmail.com

executable p1a
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P1a.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing

    build-depends:    base ^>=4.17.2.0

executable p1b
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P1b.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing

    build-depends:    base ^>=4.17.2.0

executable p2a
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P2a.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -Wno-incomplete-uni-patterns

    build-depends:
        base  ^>=4.17.2.0,
        split ^>=0.2.4,

executable p2b
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P2b.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -Wno-incomplete-uni-patterns

    build-depends:
        base  ^>=4.17.2.0,
        split ^>=0.2.4,

executable p3a
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P3a.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing

    build-depends:
        base  ^>=4.17.2.0,
        array ^>=0.5.6.0,

executable p3b
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P3b.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing

    build-depends:
        base  ^>=4.17.2.0,
        array ^>=0.5.6.0,

executable p4a
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P4a.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing

    build-depends:
        base  ^>=4.17.2.0,
        split ^>=0.2.4,

executable p4b
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P4b.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -Wno-incomplete-uni-patterns

    build-depends:
        base  ^>=4.17.2.0,
        split ^>=0.2.4,

executable p5a
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P5a.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -Wno-incomplete-uni-patterns

    build-depends:
        base  ^>=4.17.2.0,
        split ^>=0.2.4,

executable p5b
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P5b.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -Wno-incomplete-uni-patterns

    build-depends:
        base  ^>=4.17.2.0,
        split ^>=0.2.4,

executable p6a
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          P6a.hs
    ghc-options:
        -Wall
        -Wno-name-shadowing
        -Wno-incomplete-uni-patterns

    build-depends:
        base  ^>=4.17.2.0,
        split ^>=0.2.4,
